--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".SignUpActivity">
+        tools:context=".Activites.SignUpActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -124,7 +124,7 @@
                     android:textColor="@color/black"/>
 
                 <TextView
-                    android:id="@+id/tvSignup"
+                    android:id="@+id/btnSignIn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/btn"
