--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+       
     </data>
 
     <androidx.cardview.widget.CardView
@@ -29,7 +29,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvStatus"
-                    android:text="Status"
+                    android:text=""
                     android:textSize="18sp"
                     android:textColor="@color/grey"
                     android:layout_marginStart="15dp" />
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvAmount"
-                android:text="Amount"
+                android:text=""
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginStart="15dp" />
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvTitle"
-                android:text="Title"
+                android:text=""
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginStart="15dp" />
@@ -68,7 +68,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvDescription"
-                android:text="Description"
+                android:text=""
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginStart="15dp" />
